# fpv-webrtc

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  TASKS.md  docker-compose.yml  gen-certs.sh  package-lock.json  package.json
docs/: esp32-p4-agent-prompts.md  esp32-p4-user-guide.md  native-android-setup.md  sideload-install.md
esp32-p4-streamer/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32-p4-streamer/main/: CMakeLists.txt  camera.c  camera.h  config.h  datachannel.c  datachannel.h  idf_component.yml  main.c  signaling.c  signaling.h  webrtc_streamer.c  webrtc_streamer.h
fpv-native-quest/: build.gradle  gradlew  gradlew.bat  local.properties.template  settings.gradle  setup-openxr.sh
fpv-native-quest/app/: build.gradle  proguard-rules.pro
fpv-native-quest/app/src/main/: AndroidManifest.xml
fpv-native-quest/app/src/main/cpp/: CMakeLists.txt  video_decoder.cpp  video_state.h  xr_renderer.cpp
fpv-native-quest/app/src/main/java/com/fpv/quest/: EglVideoSink.kt  FPVDataChannel.kt  MainActivity.kt  SignalingClient.kt  WebRTCEngine.kt  XrRenderThread.kt
fpv-native-quest/app/src/main/res/layout/: activity_main.xml
fpv-native-quest/app/src/main/res/values/: strings.xml
fpv-native-quest/app/src/main/res/xml/: network_security_config.xml
public/: index.html  streamer.html
public/css/: style.css
public/js/: datachannel.js  main.js  stats.js  webrtc-client.js  webxr-renderer.js
server/: server.js
