idf_component_register(
    SRCS
        "main.c"
        "signaling.c"
        "webrtc_streamer.c"
        "camera.c"
        "datachannel.c"
    INCLUDE_DIRS "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        esp_http_server
        spiffs
        json
        freertos
        log
        libpeer
)
